# Web_scraping_projects

./: .gitignore  README.md  pyproject.toml  requirements.txt
api_projects/: scrapy.cfg
api_projects/api_projects/: items.py  middlewares.py  pipelines.py  settings.py
api_projects/api_projects/spiders/: quotes.py  quotes_login.py
bs4_scraping/bs4-start/: main.py
bs4_scraping/ecommerce/: ecom_data_page_2.html
bs4_scraping/top_100_movies_proj/: movies_main.py  top_100_movies.html
bs4_scraping/y_comb_proj/: y_comb_main.py  ycombinator_output.html
data_files/csv_files/: audible_multiple_pages_scrapy.csv  audible_one_page_scrapy.csv  dataudible_audiobooks.csv  output.csv  python_audiobooks.csv  top_hacker_news_stories.csv  transcripts.csv  world_pop.csv
data_files/database_files/: anscripts.py
data_files/json_files/: football_data.json  new_pop.json  transcripts_xpage.json  world_population.json
ecommerce/: ecom_data_page_1.html  ecom_main.py
jupyter_notebooks/: chat_gpt_webscraping.ipynb  world_pop.ipynb
packages_data/: billboard_100.py
scraping_with_scrapy/: scrapy_main.py
selenium_scraping/bot_creation/: bot_main.py
selenium_scraping/next_proj/: billboard_top100.py
selenium_scraping/setup/: football_matches.csv  football_matches.py  full_football_scraper.py  practice.py
spider_start/: scrapy.cfg
spider_start/spider_start/: anscripts.db  items.py  middlewares.py  pipelines.py  settings.py
spider_start/spider_start/spiders/: anscripts.py  audible.py  (+1 more)
splash_project/: debug_adamchoi.html
splash_project/splash_project/: settings.py
(+1 files in other folders)
