[project]
name = "web-scraping"
version = "0.1.0"
description = "Web scraping practice projects."
authors = [
    {name = "Arowosegbe Victor",email = "iyanuvicky@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "selenium (>=4.39.0,<5.0.0)",
    "playwright (>=1.57.0,<2.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "scrapy (>=2.14.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
